--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,16 @@
 :root{
   --primary:#121212;
+  --primary10:#253525;
   --secondary:white;
-  --textColor:rgba(0,0,0,0);
-  --textColor10' rgba(0,0,0,0.8)
+  --textColor: rgba(255,255,255,0.89);
+  --textColor10:rgba(255,255,255,0.6)
 }
 body{
   margin: 0;
   padding: 0;
   font-family: Sans-Serif;
+  background: var(--primary);
+  color: var(--textColor);
 }
 /* General styles */
 
@@ -23,7 +26,8 @@ body{
   left: 0;
   width: 100%;
   height: 7vh;
-  background: var(--primary);
+  background: transparent;
+  backdrop-filter:blur(14px);
   color: var(--secondary);
   padding: 0 20px; /* Add padding to the sides */
 }
@@ -50,7 +54,9 @@ body{
 .nav-item:hover {
   text-decoration: underline; /* Add underline on hover */
 }
-
+.intro-container{
+  margin-top: 10vh;
+}
 .intro{
   margin-top: 15vh;
 }
@@ -105,11 +111,7 @@ body{
   padding-left: .5em;
   padding-right: .5em;
 }
-.quote{
-  width'70vw;
-  padding: 1em;
-  margin: auto;
-}
+
 .video{
   height:70vh;
   width: 100vw;
@@ -117,49 +119,51 @@ body{
 }
 
 footer{
-  display: flex;
-  justify-content: center;
-  align-content: center;
+display: flex;
   background: var(--primary);
   color: var(--textColor);
   position: static;
+  margin-bottom: 0;
+  bottom: 0 ;
 width:100vw;
-height: 10vh;
+height: 20vh;
 
 }
-.aboutUs{
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 60vh;
+footer ul {
+  list-style: none;
 }
-.Card {
-  background-color: white;
-  width:70vw;
-margin: auto;
-align-items:Center;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow */
+footer ul li a {
+  font-size: 1.2em;
+  text-decoration: none;
+  color: var(--secondary);
+}
+.contact-us{
+  padding: 1em;
+  margin:auto;
+  
+}
+.contact-us p{
+  padding: iem;
+  font-size: 1.6em;
+}
+.btn{
+  border: n9ne;
+  outline: none;
+  background: var(--textColor);
+  border-radius: 7pt;
+  padding: 1em;
+  font-size: 1.4em;
+  font-weight: 400;
+}
+.btn-dark{
+  background: var(--primary);
+  color:white;
+  border:  1.5px solid var(--textColor10);
+}
+.btn-dark:hover{
+  background: #fff;
+  color: black;
 }
 
-.button {
-  background-color: black;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
 
-.button:hover {
-  background-color: #333; /* Darken the button on hover */
-}
-.pImg{
-  background: grey;
-  width: 30vw;
-  height: 20vh;
-  border-radius:5pt;
-  marker: auto;
-}
+
